fix wrap

--- a/home.css
+++ b/home.css
@@ -99,7 +99,7 @@ h1 {
 .flex {
     display: flex;
     flex-direction: row;
-    flex-wrap:wrap;
+    flex-wrap:nowrap;
     width: 90%;
     margin-left: 5%;
     margin-bottom: 5%;
